feat: Windowed event architecture for noise-resilient detection
Major refactor of the detection pipeline:

- Replace SequenceMatcher with WindowedMatcher for sliding window analysis
- Add EventBuffer for time-windowed event storage
- Add per-profile resolution settings (min_tone_duration, dropout_tolerance)
- Create centralized config.py with EngineConfig and ResolutionConfig
- Add multi-format audio support (MP3, OGG, FLAC via ffmpeg)
- Add --high-res mode for fast patterns (<100ms gaps)

New files:
- event_buffer.py: Circular buffer for events
- windowed_matcher.py: Sliding window pattern matcher
- config.py: Centralized configuration utilities

Updated docs:
- Complete README rewrite for release
- Updated ARCHITECTURE.md with windowed matching details

This addresses the issue where background noise before an alarm pattern
would break sequential detection. The windowed approach ignores noise
outside the pattern window.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,62 @@
+# Byte-compiled / optimized files
 *.pyc
-__pycache__
+*.pyo
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
+.eggs/
+wheels/
+pip-wheel-metadata/
+
+# Virtual environments
+venv/
+.venv/
+env/
+.env/
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Type checking
+.mypy_cache/
+.pytype/
+
+# Logs and temp files
+*.log
+*.txt
+!requirements.txt
+
+# Audio files (keep samples in examples/)
+*.wav
+*.mp3
+*.ogg
+*.flac
+!examples/*.wav
+!examples/*.mp3
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Local development
+.env.local
+*.local
