fix gitignore to exclude personal recorded sounds

--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,9 @@ htmlcov/
 *.mp3
 *.ogg
 *.flac
-!examples/*.wav
-!examples/*.mp3
+examples/audio/*.wav
+examples/audio/*.mp3
+examples/audio/*.m4a
 
 # OS files
 .DS_Store
