--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ name = "acoustic-engine"
 version = "1.0.0"
 description = "Real-time acoustic alarm pattern detection engine"
 readme = "README.md"
-license = {text = "MIT"}
+license = {text = "CC BY-NC 4.0"}
 authors = [
-    {name = "Your Name", email = "you@example.com"}
+    {name = "h0tp", email = "try-cycling-reverb@duck.com"}
 ]
 keywords = ["audio", "alarm", "detection", "fft", "pattern-matching", "iot", "home-automation"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: Other/Proprietary License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
@@ -48,10 +48,10 @@ tuner = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/acoustic-engine"
-Documentation = "https://github.com/yourusername/acoustic-engine#readme"
-Repository = "https://github.com/yourusername/acoustic-engine"
-Issues = "https://github.com/yourusername/acoustic-engine/issues"
+Homepage = "https://github.com/h0tp-ftw/acoustic-engine"
+Documentation = "https://github.com/h0tp-ftw/acoustic-engine#readme"
+Repository = "https://github.com/h0tp-ftw/acoustic-engine"
+Issues = "https://github.com/h0tp-ftw/acoustic-engine/issues"
 
 [project.scripts]
 alarm-tuner = "acoustic_engine.tuner.__main__:main"
